--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<button class="keyPad_Reverse">+/-</button>
 				</td>
 				<td>
-					<button class="keyPad_btnNormal">+</button>
+					<button class="keyPad_Operation">+</button>
 				</td>
 			</tr>
 			<tr>
@@ -50,7 +50,7 @@
 					<button class="keyPad_btnNormal">3</button>
 				</td>
 				<td>
-					<button class="keyPad_btnNormal">-</button>
+					<button class="keyPad_Operation">-</button>
 				</td>
 			</tr>
 
@@ -65,7 +65,7 @@
 					<button class="keyPad_btnNormal">6</button>
 				</td>
 				<td>
-					<button class="keyPad_btnNormal">*</button>
+					<button class="keyPad_Operation">*</button>
 				</td>
 			</tr>
 
@@ -81,7 +81,7 @@
 				</td>
 
 				<td>
-					<button class="keyPad_btnNormal">/</button>
+					<button class="keyPad_Operation">/</button>
 				</td>
 			</tr>
 			<tr>
